fixing image blurry on container's scaling

--- a/main_css/style.css
+++ b/main_css/style.css
@@ -170,6 +170,11 @@ table td img{
     margin: auto;
     filter:opacity(0.7);
     transition: 0.5s;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 table:hover{
